fix logo alignment in footer

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -657,7 +657,8 @@ code .highlight-line:before {
   padding: .5rem 0; }
 
 .logo svg {
-  display: block;
+  display: inline-block;
+  margin-bottom: -4px;
   width: 100%;
   max-width: 100px;
   height: auto; }
@@ -668,7 +669,7 @@ code .highlight-line:before {
   border-top: 1px solid var(--divider-color); }
 
 .footer-cta .logo {
-  margin-bottom: 2.5rem; }
+  margin: 2.5rem; }
 
 .footer-cta .section-supporting-text {
   margin-bottom: 2.5rem; }
