--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -8,7 +8,7 @@
 
 .footer-cta {
     .logo {
-        margin-bottom: 2.5rem;
+        margin: 2.5rem;
     }
 
     .section-supporting-text {
